Bro Kaung Khant Maw code are correct. Work fine. I need to explain the delete method. Thank u your effort . From now on , wee will use the lms-System which is start with Captical letter S
